tests/fixtures/coflow/invalid/lex/raw-multiline-string-unclosed.cf
text = r"""
line one
line two
